feat(role): Support role management via CMA
